# boolector

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  BitVector.h  CMakeLists.txt  COMPILING_WIN32.md  COMPILING_WIN64.md  COMPILING_WINDOWS.md  CONTRIBUTORS  COPYING  Doxyfile  IBitVector.h  LICENSE  NEWS  README  README.md  THANKS  TODO  VERSION  aigprop.c  aigprop.h  aigprop.mk  azure-pipelines-pyboolector.yml  azure-pipelines.yml  azure-pipelines.yml.sav  baf2dot.awk  basicbtor.c  beautify-code.sh  bmc.smt  bmc0k4.smt  boolector.c  boolector.h  boolector2.c  boolectormain.c  btor-memclear-example.txt  btor2horn.c  btor2horn.mk  btorabort.h  btoraig.c  (+200 more)
examples/api/c/: CMakeLists.txt  exception.cpp  makefile.common  quickstart.c
src/: BitVector.hh  CMakeLists.txt  aigprop.c  aigprop.h  boolector.c  boolector.h  boolectormain.c  boolectormc.c  boolectormc.h  btorabort.c  btorabort.h  btoraig.c  btoraig.h  btoraigvec.c  btoraigvec.h  btorass.c  btorass.h  btorbeta.c  btorbeta.h  btorbitblast.c  btorbitblast.h  btorbitvec.c  btorbitvec.h  btorbv.c  btorbv.h  btorchkclone.c  btorchkclone.h  btorchkfailed.c  btorchkfailed.h  btorchkmodel.c  btorchkmodel.h  btorclone.c  btorclone.h  btorconfig.h.in  btorconst.c  btorcore.c  btorcore.h  btordbg.c  btordbg.h  btordcr.c  (+74 more)
src/api/python/: CMakeLists.txt  README  api_usage_examples.py  boolector.pyx  boolector_py.c  boolector_py.h  btorapi.pxd  mkenums.py  mkoptions.py  pyboolector.pyx  pyboolector_abort.cpp  pyboolector_abort.h
src/btorfmt/: LICENSE  LICENSE.txt  btorfmt.c  btorfmt.h  catbtor.c  configure.sh  makefile.in
src/btorfmt/btorsim/: btorsimbv.c  btorsimbv.h  btorsimmain.c  btorsimmem.h  btorsimrng.c  btorsimrng.h  btorsimstack.h
src/btorfmt/tests/: aa.out  addnlafterfirstarg.in  allop2s.out  (+46 more)
src/dumper/: btordumpaig.c  btordumpaig.h  btordumpbtor.c  btordumpbtor.h  btordumpsmt.c  btordumpsmt.h
src/include/: btortypes.h
src/mcapi/: leapyear.c  makefile
src/normalizer/: btornormquant.c  btornormquant.h  btorskolemize.c  btorskolemize.h
src/parser/: btorbtor.c  btorbtor.h  btorbtor2.c  btorbtor2.h  btorsmt.c  btorsmt.h  btorsmt2.c  btorsmt2.h
src/preprocess/: btorack.c  btorack.h  btorder.c  btorder.h  btorelimapplies.c  btorelimapplies.h  btorelimslices.c  btorelimslices.h  btorembed.c  btorembed.h  btorextract.c  btorextract.h  btormerge.c  btormerge.h  btorminiscope.c  btorminiscope.h  btornormadd.c  btornormadd.h  btornormquant.c  btornormquant.h  btorpputils.c  btorpputils.h  btorpreprocess.c  btorpreprocess.h  btorskel.c  btorskel.h  btorskolemize.c  btorskolemize.h  btorunconstrained.c  btorunconstrained.h  btorvarsubst.c  btorvarsubst.h
src/sat/: btorcadical.c  btorcadical.h  btorcminisat.cc  btorcms.cc  btorcms.h  btorkissat.c  btorkissat.h  btorlgl.c  btorlgl.h  btorminisat.c  btorminisat.cc  btorminisat.h  btorpicosat.c  btorpicosat.h  btorsatlgl.c  btorsatlgl.h  btorsatminisat.c  btorsatpicosat.c  btorsatpicosat.h
src/simplifier/: btorack.c  btorack.h  btorder.c  btorder.h  btorelimapplies.c  btorelimapplies.h  btorelimslices.c  btorelimslices.h  btorextract.c  btorextract.h  btormerge.c  btormerge.h  btorminiscope.c  btorminiscope.h  btornormadd.c  btorskel.c  btorskel.h  btorunconstrained.c  btorunconstrained.h
src/tests/: CMakeLists.txt  test.c  testaig.c  testaig.h  testaigvec.c  testaigvec.h  testarithmetic.c  testarithmetic.h  testbitvec.c  testboolectormap.c  testboolectormap.h  testboolectornodemap.c  testboolectornodemap.h  testbv.c  testbv.h  testcases  testcomp.c  testcomp.h  testexp.c  testexp.h  testhash.c  testhash.h  testibv.cc  testinc.c  testinc.h  testinthash.c  testinthash.h  testinthashmap.c  testinthashmap.h  testlambda.c  testlambda.h  testlogic.c  testlogic.h  testmap.c  testmap.h  testmc.c  testmc.h  testmem.c  testmem.h  testmisc.c  (+35 more)
src/utils/: boolectormap.c  boolectormap.h  boolectornodemap.c  boolectornodemap.h  btoraigmap.c  btoraigmap.h  btorexpiter.c  btorexpiter.h  btorhash.h  btorhashint.c  btorhashint.h  btorhashptr.c  btorhashptr.h  btorhashptr2.c  btorhashptr2.h  btoriter.c  btoriter.h  btormem.c  btormem.h  btormisc.c  btornodeiter.c  btornodeiter.h  btornodemap.c  btornodemap.h  btoroptparse.c  btoroptparse.h  btorparamcache.c  btorpartgen.c  btorpartgen.h  btorqueue.h  btorrng.c  btorrng.h  btorstack.h  btorunionfind.c  btorunionfind.h  btorutil.c  btorutil.h
test/: CMakeLists.txt  run-test-case.py  test.c  test.h  test_aig.cpp  test_aigvec.cpp  test_arithmetic.cpp  test_boolectornodemap.cpp  test_bv.cpp  test_comp.cpp  test_exp.cpp  test_hash.cpp  test_inc.cpp  test_inthash.cpp  test_inthashmap.cpp  test_lambda.cpp  test_logic.cpp  test_mc.cpp  test_mem.cpp  test_misc.cpp  test_modelgen.cpp  test_modelgensmt2.cpp  test_nodemap.cpp  test_normquant.cpp  test_overflow.cpp  test_parseerror.cpp  test_prop.cpp  test_propinv.cpp  test_queue.cpp  test_rotate.cpp  test_satmgr.cpp  test_shift.cpp  test_smtaxioms.cpp  test_sort.cpp  test_special.cpp  test_stack.cpp  test_testcases.cpp  test_unionfind.cpp  test_util.cpp  testaigvec.c  (+36 more)
test/log/: 3vl4.btor  add.btor  addnegmul1.btor  andopt14.btor  andopt2.btor  arrayanderr.btor  arrayanderr.out  arraycond16.btor  arraycond5.btor  arraycond9.btor  arrayeqerr0.out  arrayeqerr1.out  arrayeqerr2.btor  arrayeqerr2.out  binarysearch32s016.smt  binarysearch32s016.smt2  blabs.smt2  bm2.smt2  bm3.smt2  bmc0k4.smt2  btorperr000.btor  btorperr000.out  btorperr001.btor  btorperr001.out  btorperr002.btor  btorperr002.out  btorperr003.btor  btorperr003.out  bubsort002un.smt  bubsort002un.smt2  bv_to_hex_char_bitvec.out  bvslt.axiom  bvxnor.axiom  concatslice1.btor  const2.btor  constarray.smt2  count02inc.out  count02inc.smt  count02inc.smt2  count02incuns.smt  (+599 more)
test/new_test/: CMakeLists.txt  test.h  test_aig.cpp  test_aigvec.cpp  test_arithmetic.cpp  test_boolectornodemap.cpp  test_bv.cpp  test_comp.cpp  test_exp.cpp  test_hash.cpp  test_inc.cpp  test_misc.cpp  test_modelgen.cpp  test_modelgensmt2.cpp  test_nodemap.cpp  test_overflow.cpp  test_parseerror.cpp  test_satmgr.cpp  test_special.cpp  test_stack.cpp  test_testcases.cpp
(+2340 files in other folders)
